cabal-version:       >=1.10

name:                hbacklight
synopsis:            Backlight controller for Linux systems
version:             0.1.0.0
author:              fireflower
maintainer:          fireflower.hs@gmail.com
license:             MIT
license-file:        LICENSE
build-type:          Simple
tested-with:         GHC == 8.6.5
                     GHC == 8.8.1

executable hbacklight
  main-is:             Hbacklight.hs
  ghc-options:         -main-is Hbacklight
  build-depends:       base                 >= 4.12   && <4.14,
                       boxes                >= 0.1.5  && < 0.2,
                       directory            >= 1.3.3  && < 1.4,
                       unix                 >= 2.7.2  && < 2.8,
                       optparse-applicative >= 0.15.1 && < 0.16,
                       strict               >= 0.3.2  && < 0.4,
                       transformers         >= 0.5.6  && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/paroxayte/hbacklight